--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^16.1.3",
     "@angular/router": "^16.1.3",
     "@junobuild/core": "^0.0.20",
+    "luxon": "^3.4.4",
     "nanoid": "^4.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,6 +34,7 @@
     "@angular/cli": "~16.1.3",
     "@angular/compiler-cli": "^16.1.3",
     "@types/jasmine": "~4.3.0",
+    "@types/luxon": "^3.4.2",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^8.51.0",
