--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^16.1.3",
     "@angular/router": "^16.1.3",
     "@junobuild/core": "^0.0.20",
+    "http-proxy-middleware": "^3.0.0",
     "luxon": "^3.4.4",
     "nanoid": "^4.0.2",
     "rxjs": "~7.8.0",
