--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/platform-browser": "^16.1.3",
     "@angular/platform-browser-dynamic": "^16.1.3",
     "@angular/router": "^16.1.3",
-    "@junobuild/core": "^0.0.20",
+    "@junobuild/console": "^0.0.5",
+    "@junobuild/core": "^0.0.56",
     "http-proxy-middleware": "^3.0.0",
     "luxon": "^3.4.4",
     "nanoid": "^4.0.2",
